Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -282,19 +282,17 @@ abstract = {This work presents two software components aimed to relieve the cost
     year = {2015},
     url = {https://plot.ly} }
 
-@ARTICLE{2020arXiv201203505L,
-       author = {{Lam}, Marco C and {Smith}, Robert J and {Veitch-Michaelis}, Josh and {Steele}, Iain A and {McWhirter}, Paul R},
-        title = "{An update on the development of ASPIRED}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2020,
-        month = dec,
-          eid = {arXiv:2012.03505},
-        pages = {arXiv:2012.03505},
-archivePrefix = {arXiv},
-       eprint = {2012.03505},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201203505L},
+@INPROCEEDINGS{2022ASPC..532..537L,
+       author = {{Lam}, Marco C. and {Lam}, Marco C. and {Smith}, Robert J. and {Veich-Michaelis}, Josh and {Veich-Michaelis}, Josh and {Steele}, Iain A. and {McWhirter}, Paul R.},
+        title = "{An Update on the Development of ASPIRED}",
+    booktitle = {Astronomical Society of the Pacific Conference Series},
+         year = 2022,
+       editor = {{Ruiz}, Jose Enrique and {Pierfedereci}, Francesco and {Teuben}, Peter},
+       series = {Astronomical Society of the Pacific Conference Series},
+       volume = {532},
+        month = jul,
+        pages = {537},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ASPC..532..537L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -1138,4 +1136,15 @@ archivePrefix = {arXiv},
   publisher = {IEEE COMPUTER SOC},
   doi       = {10.1109/MCSE.2007.55},
   year      = 2007
+}
+
+@software{lam_marco_c_2023_7865549,
+  author       = {Lam, Marco C},
+  title        = {SpectRes in C},
+  month        = apr,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {v‎1.0.1},
+  doi          = {10.5281/zenodo.7865549},
+  url          = {https://doi.org/10.5281/zenodo.7865549}
 }
