--- a/main.tex
+++ b/main.tex
@@ -272,10 +272,14 @@ reduction toolkit. It is designed to be a general toolkit with high flexibility
 for users to refine and optimize their data reduction routines for the
 individual characteristics of their instruments. The default configuration is
 appropriate for use on a low-resolution long-slit spectrometer at a quick-look
-quality. \textcolor{red}{Some moderate one-off effort in modifying the
-configuration will allow repeatable science-ready reduced spectral data}
-from a \textcolor{red}{reduced image}. More fine-tuning and extra (pre-)processing can
-extend the reduction to systems with more complex setups. We compare some
+quality. \textcolor{red}{\bf Some moderate one-time effort in modifying the
+configuration will allow for repeatable science-ready reduced spectral data}
+from a \textcolor{red}{\bf reduced image}. More fine-tuning and extra (pre-)processing can
+extend the reduction to systems with more complex setups. We would like to
+stress that, although only a few parameters are needed to be updated,
+it does not mean that little time is needed to get those parameters correct
+and suitable for generalisation to the instrument, because of, for example,
+instrument stability. We compare some
 example spectra reduced with \textsc{ASPIRED} to published data processed with
 \textsc{iraf}-based and \textsc{STARLINK}-based pipelines, and find no loss in
 the quality of the final product. The \textsc{Python}-based \textsc{iraf}-free
@@ -335,7 +339,7 @@ REDuction~(\textsc{ASPIRED}), coordinated on
 The ``industrial standard'' of spectral and image reduction is undoubtedly
 the \textsc{iraf} framework~\citep{1986SPIE..627..733T, 1993ASPC...52..173T}.
 It has powered many reduction engines in the past and present. However,
-unfortunately, \textcolor{red}{the National Optical Astronomy Observatory 
+unfortunately, \textcolor{red}{\bf the National Optical Astronomy Observatory 
 discontinued the support of the software in 2013}, and it is now
 entirely relying on community support\footnote{\url{https://iraf-community.github.io}}.
 The \textsc{STARLINK}
@@ -349,10 +353,9 @@ to enable low-level code access from high-level programs. These software tools
 have made significant contributions to the entire Astrophysics community. They
 are very often overlooked when they are so deeply embedded into many systems,
 and users do not interact directly with them in this era of big data
-and high data rates. However, \textcolor{red}{this is not always the case,
-many smaller facilities and individual users are still required to commission
-their own data reduction routines, and university students are still learning
-data reduction methods from the fundamentals up. These powerful libraries and
+and high data rates. However, \textcolor{red}{\bf such tools are not always available.
+Many smaller facilities and individual users are still required to commission
+their own data reduction routines. Existing powerful libraries and
 tools} also come with a few drawbacks; the most notable obstacle concerns the
 ease of installation and linkage of libraries that users often find difficult.
 
@@ -379,7 +382,7 @@ next-generation spectral data reduction. For example,
 \textsc{PypeIt}~\citep{pypeit:zenodo, 2020JOSS....5.2308P} is designed for
 tailor-made reduction for a range of instruments, and
 \textsc{PyReduce}~\citep{2021A&A...646A..32P} is designed for optimal Echelle
-spectral reduction (but \textcolor{red}{only handle sky subtraction if a sky frame is provided}). In the \textsc{Astropy}
+spectral reduction (but \textcolor{red}{\bf only handle sky subtraction if a sky frame is provided}). In the \textsc{Astropy}
 `Universe'~\citep{astropy:2013, astropy:2018},
 \textsc{specreduce}\footnote{\url{https://github.com/astropy/specreduce}}~\citep{pickering_timothy_2022_7007991} is likely to be the
 next-generation user-focused data reduction package, but it is still in early
@@ -403,20 +406,23 @@ shifted and rotated by a few pixels during engineering work) and to new instrume
 is thus especially useful for works that repeatedly make use of multiple
 spectrographs requiring rapid follow-ups.
 Using \textsc{ASPIRED} only requires basic coding skills acquired by most
-graduate-level astronomers.
+graduate-level astronomers. \textcolor{red}{\bf Similar to \textsc{iraf},
+\textsc{PypeIt} and other open source software, we welcome and encourage users
+to provide feedback as well as to contribute to the code base.}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 We use the SPRAT spectrograph \citep{2014SPIE.9147E..8HP} mounted on the \textit{Liverpool Telescope}~(\textit{LT}) as our
 ``first-light'' instrument for development. \textsc{ASPIRED} is currently used
-\textcolor{red}{by the transient science research group at the Tel Aviv University
-for a proprietary spectral data reduction pipeline of the FLOYDS instrument of
-the Las Cumbres Observatory. It is also known to be used}
+\textcolor{red}{\bf by the transient science research group at Tel Aviv University
+for a proprietary spectral data reduction pipeline of the Las Cumbres Observatory FLOYDS instrument. It is also known to be used}
 for quicklook reduction of data obtained by the MISTRAL spectrograph
 mounted on the \textit{1.93\,m telescope} at the Observatoire de
 Haute-Provence\footnote{\url{http://www.obs-hp.fr/guide/mistral/MISTRAL_spectrograph_camera.shtml}}.
 However, as mentioned, we aim to allow high-level tools for users to build and
 fine-tune their pipelines to support a wide range of
-configurations~\citep{2020arXiv201203505L, marco_2021_4463569}. As of the time
+configurations~\citep{2022ASPC..532..537L, marco_2021_4463569}. As of the time
 of writing, we have successfully used \textsc{ASPIRED} to reduce data from the
 \textit{William Herschel Telescope} Intermediate-dispersion Spectrograph and
 Imaging System\footnote{\url{https://www.ing.iac.es/astronomy/instruments/isis}}~(\textit{WHT}/ISIS)
@@ -430,7 +436,7 @@ Nazionale Galileo} Device Optimised for the LOw
 RESolution\footnote{\url{http://www.tng.iac.es/instruments/lrs}}~\citep[\textit{TNG}/DOLORES;][]{1999ldss.work..157M},
 the \textit{Very Large Telescope} FOcal Reducer/low dispersion Spectrograph 2~(\textit{VLT}/FORS2); and the \textit{Southern Astrophysical Research Telescope} Goodman High Throughput Spectrograph~\citep[\textit{SOAR}/GHTS][]{2004SPIE.5492..331C}.
 We show examples of these reductions in Section~\ref{sec:examples}\footnote{See
-also \url{https://github.com/cylammarco/aspired-example}}, and an excert of
+also \url{https://github.com/cylammarco/aspired-example}}, and an excerpt of
 example codes in Appendix~\ref{sec:appendix}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -456,16 +462,16 @@ important to the data reduction processes are discussed here.
 \label{sec:development}
 
 One of the development goals of \textsc{ASPIRED} is to design a piece of
-software that is as modular and portable as possible, \textcolor{red}{such that
-it is operable on \textsc{Linux}, \textsc{Mac} and \textsc{Windows} systems. The
-last is particularly important as software for Astronomy and Astrophysics are
-strongly leaning towards Unix systems, however, \textsc{Windows} has the highest
+software that is as modular and portable as possible, \textcolor{red}{\bf such that
+it is operable on \textsc{Linux}, \textsc{Mac} and \textsc{Windows} systems (while software for Astronomy and Astrophysics are
+strongly leaning towards Unix systems, \textsc{Windows} has the highest
 market share worldwide; furthermore, demographically it is the common choice
-among university systems, students and lower-income countries. On top of that,
-it is designed to rely} on as few external dependencies as possible.
-The ones we do use are those that would require a substantial programming effort to reproduce and have a
-proven track record of reliability and/or plan to remain maintained in the
-foreseeable future. The explicit top-level dependencies are --
+among university-managed computing systems, students and lower-income countries).
+On top of that, \textsc{ASPIRED} is designed to rely} on as few external
+dependencies as possible. The ones we do use are those that would require a
+substantial programming effort to reproduce and have a proven track record of
+reliability and/or plan to remain maintained in the foreseeable future. The
+explicit top-level dependencies are --
 \textsc{astroscrappy}~\citep{curtis_mccully_2018_1482019, 2001PASP..113.1420V}
 \textsc{Astropy}~\citep{astropy:2013, astropy:2018},
 \textsc{ccdproc}~\citep{matt_craig_2017_1069648},
@@ -473,7 +479,7 @@ foreseeable future. The explicit top-level dependencies are --
 \textsc{plotly}~\citep{plotly},
 \textsc{rascal}~\citep{2020ASPC..527..627V},
 \textsc{scipy}~\citep{2020SciPy-NMeth},
-\textsc{spectres}~\citep{2017arXiv170505165C},
+\textsc{spectresc}~\citep{2017arXiv170505165C, lam_marco_c_2023_7865549},
 \textsc{specutils}, and
 \textsc{statsmodels}~\citep{seabold2010statsmodels}. 
 
@@ -536,13 +542,13 @@ fit to map the pixel position to the wavelength value. Manual calibration is
 straightforward but tedious: first, a user has to locate the peaks of an arc
 spectrum in pixel space. Then, they have to assign a wavelength to each peak
 based on the emission lines present from the element(s) of the arc lamp.
-\textcolor{red}{
+\textcolor{red}{\bf 
 Finally, the function to map pixel values to a set of wavelengths is found. Typically a list of known strong calibration lines is used, as provided by the instrument operators in the form of an atlas or a template calibration spectrum. Automation via template matching is a viable, and commonly used, approach for spectral calibration if the instrument configuration is stable~\citep{2020JOSS....5.2308P}. However, this introduces a strong dependency on instrument-specific properties (such as the
 }vacuum/contamination condition of the lamp, the combination of elements in the
 lamp, the vignetting on the focal plane, the response as a function of wavelength
 across the detector, and saturation issues). There is also noise in peak finding routines, for
 example, due to detector noise or quantization~(e.g.\ not using sub-pixel peak
-finding), as well as complications due to blended lines. \textcolor{red}{
+finding), as well as complications due to blended lines. \textcolor{red}{\bf 
 Providing a general, template-free, tool for such a purpose for a range of
 specifications is far from easy, but would be much more flexible for cases when
 templates are unavailable or the instrument configuration changes often.}
@@ -551,22 +557,22 @@ In \textsc{ASPIRED}, the wavelength calibration module is powered by the
 RANSAC~(RANdom SAmple Consensus) Assisted Spectral CALibration ~(\textsc{rascal},
 \citealt{2020zndo...4117517V, 2020ASPC..527..627V}, Veitch-Michaelis \& Lam in prep.)
 library; a concurrent software development project.
-\textcolor{red}{\textsc{rascal} does not require templates and is designed to
+\textcolor{red}{\bf \textsc{rascal} does not require templates and is designed to
 work with an arbitrary instrument configuration. Users are only
 required to supply a list of calibration
 lines~(wavelengths), a list of peaks~(pixels), and some knowledge~(e.g.\ minimum
 and maximum wavelength limits) of the system to obtain the most appropriate
 pixel-to-wavelength solution. \textsc{rascal} builds on the work by \citet{2018ApOpt..57.6876S}, which
 searches only for \textit{plausible} sets of arc line/peak correspondences
-that follow a linear relation to first order.} RANSAC~\citep{fischler_bolles_1981}
+that follow a linear approximation.} RANSAC~\citep{fischler_bolles_1981}
 is used to fit a higher-order polynomial model to the candidate correspondences
 robustly. \textsc{rascal} extends this strategy to consider the top $N$ sets
 of linear relations simultaneously: for each peak~(pixel), the most common
 best-fit atlas line~(wavelength) is chosen from those $N$ subsets that have
 a merit function better than a given threshold. This acts like a piece-wise
 linear fit and allows us to extract most of the correct matches from both the
-red and blue ends of the spectrum that was
-\textcolor{red}{not possible with \citet{2018ApOpt..57.6876S}}.
+red and blue ends of the spectrum - a feature that was
+\textcolor{red}{\bf not available in \citet{2018ApOpt..57.6876S}}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection*{Data Reduction and Other Calibrations\\(this work)}
@@ -587,7 +593,7 @@ the slit), each extracted spectrum is stored in an independent
 \texttt{SpectrumOneD} object which gets passed from a \texttt{TwoDSpec} object.
 In Astronomy, the handling of observational
 data is almost exclusively done with FITS files, but they are not
-human-readable. In view of that, \textsc{ASPIRED} provides \textcolor{red}{input
+human-readable. In view of that, \textsc{ASPIRED} provides \textcolor{red}{\bf input
 and output handling of FITS files, and output in CSV format.} All the
 higher-level functions are wrappers on top of a \texttt{spectrumOneD} object.
 
@@ -595,22 +601,23 @@ higher-level functions are wrappers on top of a \texttt{spectrumOneD} object.
 \section{Image Reduction}
 \label{sec:image_reduction}
 
-\textcolor{red}{\textsc{ASPIRED} only intends to provide image reduction methods
+\textcolor{red}{\bf \textsc{ASPIRED} only intends to provide image reduction methods
 for bias, dark and flat corrections. It is } sufficient for simple instrumental
 setups, which are the primary targets of \textsc{ASPIRED}.
 For example, a long-slit spectrograph with a rectilinear
 two-dimensional spectrum illuminated on the detector plane, i.e. the dispersion
 and spatial directions are perfectly perpendicular to each other across the
 entire detector plane.
-\textcolor{red}{In systems with more complex optical design, for example,
-instruments have multiple non-parallel spectra illuminated on the
+\textcolor{red}{\bf In systems with more complex optical design, for example,
+instruments having multiple non-parallel spectra illuminated on the
 detector plane, \textsc{ASPIRED} is not immediately usable. Extra image
-manipulation is needed to further reduce the data into simpler forms that
+manipulation is needed to further transform the data into simpler forms that
 \textsc{ASPIRED} can handle. In the FLOYDS reduction example below, we
 demonstrate that it is possible to extract two non-parallel curved spectra
 from a single two-dimensional image. This is possible only because the two
-spectra do not cross-contaminate, and thus can be cleanly separated by
-applying masks to the data.}
+spectra  (first-order red and second-order blue) that are simultaneously
+imaged by the detector can be cleanly separated before spectral reduction,
+and each spectrum is treated independently.}
 
 This module allows mean-, median-, and sum-combining, subtracting and dividing
 by dark, bias and flat frames. The FITS header of the \textit{first}
@@ -654,7 +661,7 @@ rectification, spectral tracing, spectral extraction of the target and the
 arc, and locating the peaks of the arc lines. The latter performs
 wavelength calibration (with the \texttt{WavelengthCalibration} class),
 flux calibration (with the \texttt{FluxCalibration} class), atmospheric
-extinction correction, \textcolor{red}{telluric absorption correction, and
+extinction correction, \textcolor{red}{\bf telluric absorption correction, and
 spectral resampling.} Diagnostic images can be exported at each step of the
 two- and one-dimensional operations. This also includes the wavelength
 calibration diagnostic that wraps around \textsc{rascal} and uses their native
@@ -704,7 +711,7 @@ procedure. This tracing procedure is illustrated in Figure \ref{fig:trace}, and 
     \item
         Each line spread function is upscaled by a factor of
         \texttt{resample\_factor} to allow for sub-pixel correlation
-        precision. This utilises the \texttt{scipy.signal.resample}
+        precision. This utilizes the \texttt{scipy.signal.resample}
         function to fit the spatial profile with a cubic spline.
     \item
         The $i$-th line spread function is then cross-correlated to the $i+1$-th
@@ -740,25 +747,25 @@ from the standard frame for spectral extraction of the science target.
     \includegraphics[width=\columnwidth]{fig_01_tracing.pdf}
     \caption{Top: A significantly tilted spectrum is used to illustrate how
     cross-correlation is used to find the shift between neighbouring
-    sub-spectra \textcolor{red}{with a resampling factor of 1.0}. The \textcolor{red}{light grey, dark grey and black} boxes are three example
+    sub-spectra \textcolor{red}{\bf with a resampling factor of 1.0}. The \textcolor{red}{\bf light grey, dark grey and black} boxes are three example
     sub-spectra. Bottom left: the three sub-spectra are summed in
     the dispersion direction to generate the three profiles that are
     cross-correlated to compute the shift. Bottom right: the
-    cross-correlated function for the \textcolor{red}{light grey} sub-spectrum relative
-    to the \textcolor{red}{dark grey} sub-spectrum (plotted in alternating \textcolor{red}{light and dark grey} dashes), and the one
-    for the \textcolor{red}{black} sub-spectrum relative to the \textcolor{red}{dark grey} sub-spectrum
-    (plotted in alternating \textcolor{red}{dark grey and black} dashes).}
+    cross-correlated function for the \textcolor{red}{\bf light grey} sub-spectrum relative
+    to the \textcolor{red}{\bf dark grey} sub-spectrum (plotted in alternating \textcolor{red}{\bf light and dark grey} dashes), and the one
+    for the \textcolor{red}{\bf black} sub-spectrum relative to the \textcolor{red}{\bf dark grey} sub-spectrum
+    (plotted in alternating \textcolor{red}{\bf dark grey and black} dashes).}
     \label{fig:trace}
 \end{figure}
 
-\textcolor{red}{
-In the cross-correlation process, we support the up-sampling of the data. However,
-because more than one spectrum could be incidented on the slit, we do not attempt
-to fit any profile at this stage. Hence, the shifts found are always quantized.
+\textcolor{red}{\bf 
+In the cross-correlation process, ASPIRED supports the up-sampling of the data. 
+Because more than one target could be incident on the slit, we do not attempt
+to fit any profile at this stage. Hence, the shifts found are always quantized to an integer pixel level.
 However, the polynomial fitted through the shifts as a function of the dispersion
-direction is a continuous function (precision depends on the up-sampling rate).
+direction is a continuous function. The final precision depends on the up-sampling rate.
 If no up-sampling is performed and the spectrum is tilted by one pixel across the
-entire range of dispersion, this step will not be able to get the tilt correctly.
+entire range of dispersion, for example, this step will not be able to get the tilt correctly.
 By default, we set the up-sampling rate to four. This should be sufficient to
 correct for a tilt in the spectrum as little as 0.25 pixels across the entire
 range of dispersion.
@@ -847,7 +854,7 @@ textbook method is commonly called the \textit{top-hat} extraction or the
 \textit{normal} extraction. It simply sums the electron counts over a given size
 of the aperture and is robust and easy to use. However, this method does not
 deliver the maximal signal-to-noise ratio~(SNR) from the available data. Various
-optimal extraction algorithms can maximise the SNR. They work by down-weighting
+optimal extraction algorithms can maximize the SNR. They work by down-weighting
 the wings of the spectral profile where almost all the photons come from the sky
 background rather than the source~(see Fig.~\ref{fig:extraction}). The\
 improvement is particularly significant for background-limited sources, which
@@ -865,7 +872,7 @@ for diagnostics.
     hash marks the region that is used for spectral extraction.
     The two boxes show the two columns of pixels fitted with
     profiles in the bottom half of the figure (the boxes are inflated
-    for clarity). \textit{Bottom}: The independently normalised electron
+    for clarity). \textit{Bottom}: The independently normalized electron
     counts across the two slices, the much higher baseline on the right indicates a lower signal-to-background ratio. The vertical black dashed
     line is the centroid~(trace) of the spectrum, the two red dashed lines
     mark the regions of the source, and the pairs of green dashed lines on
@@ -932,7 +939,7 @@ to \textsc{Python 3}.
     using the three extraction methods are very similar. \textit{Bottom}: The
     uncertainties with the three extraction methods in units of electron counts.
     The top-hat method is clearly noisier than the two optimal methods.
-    \textcolor{red}{Extraction using \texttt{Horne86} and \texttt{Marsh89} algorithm produce
+    \textcolor{red}{\bf Extraction using \texttt{Horne86} and \texttt{Marsh89} algorithm produce
     almost identical outputs.}}
     \label{fig:extraction_compared}
 \end{figure}
@@ -959,7 +966,7 @@ and the pixel-wavelength relation~(Fig.~\ref{fig:wavecal}).
 Alternatively, the polynomial coefficients for the wavelength calibration can be
 supplied manually, which would be useful for stable instruments in which the
 variations in the dispersion are negligible. All the lines in the
-\textcolor{red}{range of } 100 to 30\,000 \AA\ 
+\textcolor{red}{\bf range of } 100 to 30\,000 \AA\ 
 available from the search form of the National Institute of Standards and
 Technology~(NIST) Physical Measurement Laboratory are included, but we strongly
 recommend providing arc lines manually since arc lamps, even of similar type,
@@ -981,7 +988,7 @@ vary between manufacturers and the conditions.
 \subsection{Flux Calibration}
 \textsc{ASPIRED} is designed to address the common case where targets and
 reference standards are observed contemporaneously in close succession. It is
-well suited to constructing unsupervised, automated pipelines for stable and
+well suited to constructing unsupervized, automated pipelines for stable and
 repeatable instruments. In such cases, an instrument sensitivity function can be
 created from several standard targets, stored and applied to many science target
 observations. At the time of writing, \textsc{ASPIRED} cannot construct a
@@ -989,7 +996,7 @@ sensitivity function from multiple frames, but it can accept a user-supplied
 polynomial function to apply the calibration.
  
 The process of deriving a sensitivity function is by comparing a
-wavelength-calibrated standard spectrum with the literature values to map the electron count to flux as a function of wavelength. \textcolor{red}{All
+wavelength-calibrated standard spectrum with the literature values to map the electron count to flux as a function of wavelength. \textcolor{red}{\bf All
 the standard stars available in \textsc{iraf}, on the Issac Newton Group of
 Telescopes webpage, and on the ESO webpage -- \textit{Optical and UV
 Spectrophotometric Standard Stars}} are available on \textsc{ASPIRED}. We
@@ -1052,23 +1059,23 @@ below) will have a different effect compared to flux fitting.
 A Savitzky-Golay smoothing
 filter\footnote{\url{https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.savgol_filter.html}}~\citep[hereafter, SG-filter]{1964AnaCh..36.1627S}
 can be applied to the data before computing the sensitivity curve. This function
-works by fitting low-order polynomials to localised subsets of the data to
+works by fitting low-order polynomials to localized subsets of the data to
 suppress noise in the data at each point interval. It is similar to the
 commonly used median boxcar filter but uses more weighted information to
 retain information better while removing noise. This can be used independently
-or with continuum fitting (see below), which uses a LOWESS filter. By default,
+or with continuum fitting (see below). By default,
 the smoothing is turned off and when it is used, it is defaulted to
 remove only significant noise~(e.g.\ from unsubtracted cosmic rays).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection*{Continuum Fitting}
-\textcolor{red}{It is optional for the sensitivity function to be} derived from
-the continuum of the standard spectrum. This \textcolor{red}{removes} absorption
+\textcolor{red}{\bf It is optional for the sensitivity function to be} derived from
+the continuum of the standard spectrum. This \textcolor{red}{\bf removes} absorption
 lines in the standard spectrum. This process is strongly dependent on both the
 resolution of the literature and the observed standards, as well as the
 absorption lines present in them. 
-The continuum is \textcolor{red}{found using the \textsc{specutils}'s
-\texttt{fits\_continuum}}. This can remove any outlying random noise and
+The continuum is \textcolor{red}{\textbf{found using the} \textsc{specutils}'s
+\textbf{\texttt{fits\_continuum}}}. This can remove any outlying random noise and
 absorption lines when computing the  sensitivity. Users are reminded to be
 cautious with this procedure as removing the absorption features in computing
 the sensitivity function can significantly affect the flux calibration near
@@ -1125,7 +1132,7 @@ using the conventional keywords for airmass.
     orange), Cerro Paranal Observatory~(2\,635\,m; green), and La Silla
     Observatory~(2400\,m; red). The extinction table of La Silla Observatory
     terminates at $9\,000$\,\AA. The rise at the red end of the curve is an
-    undesired artefact due to extrapolation using a cubic spline (included in the original data). We are
+    undesired artefact due to extrapolation using a cubic spline. We are
     explicitly plotting this range to serve as a warning since we opt to
     preserve the raw data as provided without appending fake data points.}
     \label{fig:extinction}
@@ -1163,7 +1170,7 @@ sampled wavelength axis, which never happens naturally as there is always some
 level of image distortion at the detector plane. A resampling is necessary
 to turn the data into such a format.
 
-The resampling is performed with the \textsc{spectres} package. Although
+The resampling is performed with the \textsc{spectresc} package. Although
 this package allows non-uniform wavelength spacing resampling, we are only
 using it for uniform resampling for the purpose of exporting the data as FITS
 files.
@@ -1238,55 +1245,25 @@ output option is CSV. The options for output are:
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\textcolor{red}{\section{Validation}
+\textcolor{red}{\bf \section{Validation}
 \label{sec:examples}
 }
 Being a flexible toolkit, \textsc{ASPIRED} is not designed to reduce data for a
-specific instrument. Instead, it can be customised to suit many configurations,
+specific instrument. Instead, it can be customized to suit many configurations,
 as long as they are long-slit-like. We demonstrate this here with data products
 from eight different instruments, most of which have conventional long-slit
 settings. A summary of the following example reductions is tabulated in
 Table~\ref{tab:summary}.
 
-\textcolor{red}{The purpose of the comparison made here is to demonstrate that
-the reductions are sufficiently consistent with some spectra in the literature
+\textcolor{red}{\bf The purpose of the comparison made here is to demonstrate that
+the reductions are sufficiently consistent with representative spectra in the literature
 for a range of instruments and astrophysical sources. However, a full
 systematic comparison is beyond the scope of this work. Such a level of
-detailed validation would be the most useful if any service providers wish to
-adopt \textsc{ASPIRED} as the official reduction tool, and that shall be
+detailed validation might be required for any service providers who wish to
+adopt \textsc{ASPIRED} as their official reduction tool, and will be
 included in future work.}
 
-\textcolor{red}{\subsection{Repeatability}}
-\textcolor{red}{In order to demonstrate the reproducibility and repeatability,
-we opt to calibrate the standard star BD\,33+2642 against Hiltner\,102 on
-eight nights that \textit{LT}/SPRAT collected both on the same night during
-semester 2022\,B. We require the transparency to be photometric and the seeing
-is better than 2'' as reported by the autoguider. Because of the robotic
-observing nature of the LT, standard stars are only taken in the beginning
-and at the end of the nights. The data used are not taken immediately
-before or after each other, the weather effect cannot be calibrated out,
-we only attempt to apply atmospheric extinction corrections and telluric
-absorption corrections. From the reprocessing, We find a typical spread in
-the residual of roughly 1-2\%. The absolute deviation is within 3\% apart from
-around the Telluric absorption regions and at the H$\gamma$ line at 4340\,\AA\
-that are observed at low detector efficiency~(see Fig.~\ref{fig:repeatability}).}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\columnwidth]{fig_08_sprat_standards_compared.png}
-    \caption{\textcolor{red}{Fractional residual in the calibrated flux of BD\,33+2642 using
-    Hiltner\,102 as a standard star taken with \textit{LT}/SPRAT. Each grey
-    lines show the residual between the median spectrum of the eight spectra
-    taken on different nights. The blue area shows the 1 standard deviation
-    of the scatter in the residual. The spikes above 5\% residual are the
-    H$\gamma$ at 4340\,\AA\ and the oxygen telluric features at the 6869 and
-    7605\,\AA\ . The residuals that are larger on the two ends are expected as
-    the signal-to-noise ratios drop with the detector efficiency on either
-    side.}}
-    \label{fig:repeatability}
-\end{figure}
-
-\textcolor{red}{\subsection{Example Data Reduction Results}
+\textcolor{red}{\bf \subsection{Example Data Reduction Results}
 }
 In the case of Gemini/GMOS, a single spectrum is exposed onto
 three detectors, and each detector is read out with four amplifiers. The bias 
@@ -1351,7 +1328,7 @@ To summarize, our test cases cover the most commonly encountered possible
 problematic data (red or blue dominated spectra, narrow/broad
 absorption/emission lines, featureless spectra, closely spaced (resolved)
 line spectra and curved spectra) and demonstrate that \textsc{ASPIRED} can
-produce spectral products at a quality comparable to \textcolor{red}{some
+produce spectral products at a quality comparable to \textcolor{red}{\bf some
 selected published spectra}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1371,7 +1348,7 @@ selected published spectra}.
         Las Cumbres/FLOYDS           & Type II-P (iPTF14hls)                       & 235\,l/mm           & HgArZn \\
         Gemini/GMOS          & kilonova (AT 2017gfo)                       & R400 \& B600        & CuAr \\\hline
 \end{tabular}
-    \caption{List of the eight targets used in Figures~\ref{fig:reduction_compared} \& \ref{fig:use_cases} \textcolor{red}{in alphabetical order of the telescope names}. See body text for references.}
+    \caption{List of the eight targets used in Figures~\ref{fig:reduction_compared} \& \ref{fig:use_cases} \textcolor{red}{\bf in alphabetical order of the telescope names}. See body text for references.}
     \label{tab:summary}
 \end{table*}
 
@@ -1408,6 +1385,36 @@ selected published spectra}.
     \label{fig:use_cases}
 \end{figure}
 
+
+\textcolor{red}{\bf \subsection{Repeatability}}
+\textcolor{red}{\bf In order to demonstrate reproducibility and repeatability,
+we opt to calibrate the standard star BD\,33+2642 against Hiltner\,102 on
+eight nights for which \textit{LT}/SPRAT observed both on the same night during
+semester 2022\,B. We require the transparency to be photometric, and the seeing
+be better than 2'' as reported by the autoguider. Because of the robotic
+observing nature of the LT, standard stars are only taken at the beginning
+and at the end of the night. The data used are not taken immediately
+before or after each other, and therefore weather effects cannot be calibrated out.
+We only apply atmospheric extinction corrections and telluric
+absorption corrections. The spectra are consistent with each other to within
+1-2\%~(apart from the Telluric absorption regions and at the H$\gamma$ line at 4340\,\AA\
+that are observed at low detector efficiency, see Fig.~\ref{fig:repeatability}).}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{fig_08_sprat_standards_compared.png}
+    \caption{\textcolor{red}{\bf Fractional residual in the calibrated flux of BD\,33+2642 using
+    Hiltner\,102 as a standard star taken with \textit{LT}/SPRAT. Each grey
+    line depicts the calibration residual between the median spectrum of the eight spectra
+    taken on different nights. The blue area shows the 1 standard deviation
+    of the scatter in the residual. The spikes above 5\% residual are at the
+    H$\gamma$ line at 4340\,\AA\ and the oxygen telluric features at 6869 and
+    7605\,\AA\ . The residuals that are larger on the two ends are expected as
+    the signal-to-noise ratios drop with the detector efficiency on either
+    side.}}
+    \label{fig:repeatability}
+\end{figure}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Distribution}
 \label{sec:distribution}
@@ -1430,7 +1437,7 @@ and the development version can be installed with
 >> pip install git+https://github.com/
     cylammarco/ASPIRED@dev-v[Major].[Minor].X
 \end{verbatim} where \verb+[Major]+ and \verb+[Minor]+ are the major and minor
-version numbers. \verb+X+ is an actual character of the branch name as we only
+version numbers. \verb+X+ is an actual character of the branch name, as we only
 use separate maintenance branches at the level of minor version granularity.
 
 It is also possible to clone the entire repository
@@ -1442,11 +1449,11 @@ and install with the setup script using
 ASPIRED is distributed through \textsc{conda} starting from \texttt{v0.4.9}.
 
 \textcolor{red}{
-All the reduction scripts for the spectra used in this article can be found at
+\bf All the reduction scripts for the spectra used in this article can be found at
 \url{https://github.com/cylammarco/ASPIRED-apj-article}.} There are also example
 reduction scripts available from the companion repository
 \textsc{ASPIRED-example}\footnote{\url{https://github.com/cylammarco/ASPIRED-example}}
-that is tagged by version number starting from \texttt{v0.4}. \textcolor{red}{This work is most accurately
+that is tagged by version number starting from \texttt{v0.4}. \textcolor{red}{\bf This work is most accurately
 reflecting the software release of the \texttt{v0.5}-series.}
 
 
@@ -1539,7 +1546,7 @@ Based on observations collected at the European Southern Observatory under ESO p
     \textsc{plotly}~\citep{plotly},
     \textsc{rascal}~\citep{2020ASPC..527..627V},
     \textsc{scipy}~\citep{2020SciPy-NMeth},
-    \textsc{spectres}~\citep{2017arXiv170505165C},
+    \textsc{spectresc}~\citep{2017arXiv170505165C, lam_marco_c_2023_7865549},
     \textsc{specutil}, and
     \textsc{statsmodels}~\citep{seabold2010statsmodels}
     }
